useful/deployed/ingress-nginx/dash-ingress-tls.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dash-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # todo rewrite of the target does not seem to work for dashboard
    # (get a blank web page)
    # nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules: 
  - host: gilesk.ddns.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: dashboard-release-kubernetes-dashboard
              port:
                number: 443
  tls:
  - hosts:
    - gilesk.ddns.net
    secretName: gilesk.ddns.net-tls
